style: fix mobile menu and sync dark mode with team design

--- a/form.css
+++ b/form.css
@@ -2,7 +2,7 @@
     --color-primary-dark: #161E54;    
     --color-primary-blue: #22668D;    
     --color-accent-blue: #8ECDDD;     
-    --color-background-cream: #FFFFEB; 
+    --color-background-cream: #fcfcf2; 
     --color-accent-orange: #e49708;    
 }
 
@@ -79,22 +79,23 @@ body {
     color: red;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 1024px) {
     .form-card {
         width: 60%; 
     }
 
-    .site-header {
-        flex-direction: column;
-        padding: 15px 0;
-    }
-
-    .nav-list {
-        justify-content: center;
-        margin-top: 15px;
-        gap: 15px;
-        
-    }
 
     .main-wrapper {
         padding-top: 180px;  
@@ -109,21 +110,27 @@ body {
         width: 80%; 
     }
     .main-wrapper {
-        padding-top: 30px; 
+        padding-top: 140px; 
     }
-
-   
+    
 }
+
 
 @media (max-width: 480px) {
     .form-card {
         width: 95%; 
         padding: 20px; 
     }
+    .main-wrapper {
+        padding-top: 140px;}
 
     .title {
         font-size: 24px !important; /* שימוש בפיקסלים מבטל את ה-vw הבעייתי */
         margin-bottom: 20px;
         line-height: 1.3;
         }
+    
+
+  
+
 }
